--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="experience-item">
                     <div class="experience-logo vng">
-                        <img src="https://cdn.discordapp.com/attachments/1368901981049192564/1369325093293002813/dwa.png?ex=681b72df&is=681a215f&hm=f8d9c340b897f3f652586ebd9996e63a62a41e9d91153066cc072da9d458de52&" alt="VNG Logo">
+                        <img src="https://freeimage.host/i/3eVXs4V" alt="VNG Logo">
                     </div>
                     <div class="experience-content">
                         <h3>3D Artist & Technical Specialist</h3>
