--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="experience-item">
                     <div class="experience-logo vng">
-                        <img src="https://freeimage.host/i/3eVXs4V" alt="VNG Logo">
+                        <img src="https://iili.io/3eVXs4V.png" alt="VNG Logo">
                     </div>
                     <div class="experience-content">
                         <h3>3D Artist & Technical Specialist</h3>
